@@ -1,5 +1,7 @@
 package net.labymod.serverapi.api.model.component;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public enum ServerAPITextDecoration {
@@ -10,7 +12,9 @@ public enum ServerAPITextDecoration {
   ITALIC,
   ;
 
-  private static final List<ServerAPITextDecoration> VALUES = List.of(values());
+  private static final List<ServerAPITextDecoration> VALUES = Collections.unmodifiableList(
+      Arrays.asList(values())
+  );
 
   public static List<ServerAPITextDecoration> getValues() {
     return VALUES;
